# PoolMind

./: .gitignore  .gitlint  .gitmessage  .pre-commit-config.yaml  .renovaterc.json  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  install.sh  mkdocs.yml  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  hardware_issue.md
.github/workflows/: ci.yml  renovate.yml  test-deployment.yml
config/: config.yaml
docs/: ARCHITECTURE.md  CALIBRATION.md  CONFIGURATION.md  FRONTEND.md  MARKERS.md  QUICKSTART.md  README.md  RENOVATE.md  SIMULATION.md  WEB.md  index.md
scripts/: QUICKSTART.md  README.md  SIMULATION.md  debug_aruco.py  debug_markers.py  demo.py  gen_markers.py  index.sh  inspect_frame.py  poolmind-update.service  poolmind-update.timer  poolmind.service  run.sh  simple_demo.py  test_aruco.py  update.sh  validate-renovate.sh
scripts/demo/: IMPLEMENTATION_SUMMARY.py  README.md  demo.py  enhanced_simulation.py  full_simulation.py  physics_simulator.py  replay_system.py  simple_physics_demo.py  virtual_table.py
scripts/deployment/: README.md  auto-update.sh  deploy-remote.sh  status.sh  update.sh  (+1 more)
tests/: test_app.py  test_app_simple.py  test_ball_detection.py  test_camera.py  test_game_engine.py  test_markers_clean.py  test_replay.py  test_table_geometry.py  test_tracking.py  test_ui_overlay.py  test_web_hub.py  test_web_server.py  test_web_ui_integration.py
(+28 files in other folders)
